fixup cors and spacing

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -210,7 +210,14 @@
     @apply w-1/2 max-w-[16rem] mx-auto md:w-full;
   }
   .music .content .side-by-side audio.obp-audio {
-    @apply my-2 h-10 w-3/4;
+    @apply my-2 h-8 w-3/4;
+  }
+  .music .content .side-by-side .obp-grid {
+    @apply grid items-center justify-center grid-cols-2 text-sm pl-4;
+  }
+
+  .music .content .side-by-side .obp-grid p {
+    @apply pr-2;
   }
 
   /* Within blog posts */
